# eccpp

./: CMakeLists.txt  README.md  gn.h  hamdist.h  hamweight.h  kron.h  longest-common.h  matrix.h  mdarray.h  minstar.h  phi.h  polar-dec.h  polar-enc.h  repeat-enc.h  shuffle.h  sign.h
cmake/: eccpp-config.cmake.in
examples/: CMakeLists.txt  frozen-bits.cpp  hello-world.cpp  polar-dist.cpp  punct.cpp  shared.h  sim.cpp
tests/: CMakeLists.txt  gn.cpp  hamdist.cpp  kron.cpp  longest-common.cpp  mdarray-add.cpp  mdarray-mul-scalar.cpp  mdarray-mul.cpp  mdarray_mul.cpp  minstar.cpp  phi.cpp  polar-dec.cpp  polar-enc.cpp  repeat-enc.cpp  shuffle.cpp
